[package]
name = "scrt-random-mint-manager"
version = "0.1.0"
authors = ["wolfbytes"]
edition = "2021"
description = "Smart Contract manage random minting of magic bones"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", tag = "v1.1.9-secret" }
secret-toolkit = { git = "https://github.com/scrtlabs/secret-toolkit", tag = "v0.8.0", default-features = false, features = ["storage", "serialization", "utils", "permit", "viewing-key", "crypto", "snip721", "snip20"] }
cosmwasm-storage = { git = "https://github.com/scrtlabs/cosmwasm", tag = "v1.1.9-secret" }
schemars = "0.8.12"
serde = { version = "1.0.154", default-features = false, features = ["derive"] }
bincode2 = "2.0.1"
base64 = "0.21.0"
thiserror = { version = "1.0" }
rand_chacha = { version = "0.3.1", default-features = false }
rand_core = { version =  "0.6.4", default-features = false } 
sha2 = { version = "0.9.1", default-features = false }

[dev-dependencies]
cosmwasm-schema = { version = "1.2.2" }